--- a/client/src/components/Studio.css
+++ b/client/src/components/Studio.css
@@ -96,13 +96,8 @@
   border-top: 1px solid #555;
 }
 
-/* .chat-input {
-  flex: 1;
-  padding: 8px;
-  border: none;
-  background-color: #2c2c2c;
-  color: #222;
-  font-size: 16px;
-  outline: none;
-  width: 100%; 
-} */
+.chat-screen{
+  margin-top: 50px;
+  max-height: 80vh; /* Set a maximum height for the chat screen */
+  overflow-y: auto; /* Enable vertical scroll bar when needed */
+}
